--- a/templates/towers.html
+++ b/templates/towers.html
@@ -39,6 +39,19 @@ nav {
     font-size: 1.25rem;
 }
 
+.input2 {
+    width: 100%;
+    padding: 12px;
+    background: #2a3448;
+    border: 2px solid #7c3aed;
+    border-radius: 8px;
+    color: #fff;
+    margin-bottom: 14px;
+    position: relative;
+    top: 4px;
+}
+
+
 @media (max-width: 768px) {
     h1 {
         font-size: 1.7rem;
@@ -975,6 +988,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
