--- a/templates/home.html
+++ b/templates/home.html
@@ -11,9 +11,10 @@
 
         .app-title {
             max-width: 1400px;
-            margin: 0 auto;
+            margin: 61px auto 0 auto;
             padding: 1.5rem 2rem 0.5rem 2rem;
         }
+
         
         .app-title a {
             display: inline-block;
