--- a/templates/towers.html
+++ b/templates/towers.html
@@ -2,8 +2,7 @@
 
 {% block title %}Towers - AH Gambling{% endblock %}
 
-{% block extra_styles %}
-
+{% block extra_css %}
 <style>
 * {
     margin: 0;
